src/Tools/email-list-checker/email-list-checker.css
@import '/Rain-Support-Tools/src/common/css/default.css';

.import{
    position: absolute;
    z-index: 5;
    width: 50%;
    height: 60%;
    background-color: #9c9999;
    left: 30%;
    top: 10%;

    textarea{
        margin-left: 10px;
        width: 45%;
        height: 90%;
        float: left;
        resize: none;
    }
    #get-email-list-code{
        width: 45%;
        margin-left: 10px;
        float: left;
    }
}
.code-display{
    margin: unset;
    white-space: unset;
    background-color: #000;
    color: #fff;
    cursor: pointer;
    pre{
        text-wrap: wrap;
        margin: unset;
    }
}
.mainContainer{
    width: 85%;
    margin: 0 auto;

    .mainContent > div{
        width: 33%;
        float: left;

        > textarea{
            height: 600px;
            width: 355px;
        }
    }
}
.hide{
    display: none;
}

